[package]
name = "simeng_testing"
version = "0.1.0"
edition = "2021"

[dependencies]
simeng_sys = { path = "/home/jack/Documents/simeng/simeng_sys" }
simeng_task = { path = "/home/jack/Documents/simeng/simeng_task" }
simeng_executor = { path = "/home/jack/Documents/simeng/simeng_executor" }
flume = "0.11.1"
