[package]
name = "simeng_executor"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
flume = "*"


[dependencies]
simeng_task = { path = "/home/jack/Documents/yage/yage_task" }
concurrent_queue = { path = "/home/jack/Documents/yage/concurrent_queue" }
slab = { version = "0.4.9", default-features = false }
yage_net = {path = "/home/jack/Documents/yage/yage_net"}

[features]
std = ["slab/std", "yage_task/std"]
default = ["std"]
